--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,3 @@
-# From C:\flutter_projects\first_flutter_app
-@'
 platform :ios, '13.0'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -11,23 +9,20 @@ project 'Runner', {
 
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# ----------------------------------------------------------------------
 # Flutter integration (resolve real flutter SDK path)
-# ----------------------------------------------------------------------
-flutter_bin = `which flutter`.strip
+flutter_bin = which flutter.strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Static frameworks keep Swift interop and avoid many modulemap issues
   use_frameworks! :linkage => :static
   use_modular_headers!
 
-  # gRPC pins (use available patch version from CDN)
-  pod 'gRPC-ProtoRPC', '~> 1.62'
-  pod 'gRPC-C++',      '~> 1.62'
+  # Let CocoaPods resolve the latest available on the runner CDN
+  pod 'gRPC-ProtoRPC'
+  pod 'gRPC-C++'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
@@ -41,9 +36,3 @@ post_install do |installer|
   end
   flutter_post_install(installer) if defined?(flutter_post_install)
 end
-'@ | Set-Content -Encoding ascii -NoNewline ios\Podfile
-
-git add ios\Podfile
-git commit -m "iOS Podfile: switch to gRPC-ProtoRPC and loosen pins (~> 1.62)"
-git pull --rebase origin main
-git push origin main
