--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,3 @@
-Set-Location "C:\flutter_projects\first_flutter_app"
-
-$pod = @'
 platform :ios, '14.0'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -12,8 +9,8 @@ project 'Runner', {
 
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# Flutter integration (resolve real flutter SDK path)
-flutter_bin = `which flutter`.strip
+# Flutter integration (resolve real flutter SDK path) ? use %x() (safer than backticks on CI)
+flutter_bin = %x(which flutter).strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 
@@ -23,15 +20,15 @@ target 'Runner' do
   use_frameworks! :linkage => :static
   use_modular_headers!
 
-  # Let CocoaPods resolve the latest available on the runner CDN
-  pod 'gRPC-ProtoRPC'
-  pod 'gRPC-C++'
+  # Rely on transitive gRPC pods; only pin if modulemap errors appear
+  # pod 'gRPC-ProtoRPC'
+  # pod 'gRPC-C++'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
-  # Force iOS 14.0 on ALL pods and the user target to satisfy ML Kit + Firebase
+  # Force iOS 14.0 everywhere to satisfy ML Kit + Firebase minimums
   installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
@@ -47,11 +44,3 @@ post_install do |installer|
   end
   flutter_post_install(installer) if defined?(flutter_post_install)
 end
-'@
-
-$pod | Set-Content -Encoding ascii -NoNewline ios\Podfile
-
-git add ios\Podfile
-git commit -m "iOS: bump deployment target to 14.0 (ML Kit requirement); enforce for Pods + Runner"
-git pull --rebase origin main
-git push origin main
