--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,7 +9,7 @@ project 'Runner', {
 
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# Flutter integration (resolve real flutter SDK path) ? use %x() (safer than backticks on CI)
+# Flutter integration (robust on CI)
 flutter_bin = %x(which flutter).strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
@@ -17,18 +17,12 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  use_frameworks! :linkage => :static
-  use_modular_headers!
-
-  # Rely on transitive gRPC pods; only pin if modulemap errors appear
-  # pod 'gRPC-ProtoRPC'
-  # pod 'gRPC-C++'
-
+  # NO use_frameworks!, NO use_modular_headers!
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
-  # Force iOS 14.0 everywhere to satisfy ML Kit + Firebase minimums
+  # Enforce iOS 16 across pods + user targets (satisfies ML Kit)
   installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
