--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,3 @@
-Set-Location "C:\flutter_projects\first_flutter_app"
-
-$pod = @'
 platform :ios, '16.0'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -12,8 +9,6 @@ project 'Runner', {
 
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# (No use_modular_headers! — not needed with dynamic frameworks)
-
 # Flutter integration (robust on CI)
 flutter_bin = %x(which flutter).strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
@@ -22,28 +17,22 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Use dynamic frameworks for Firebase/ML Kit Swift pods
+  # Dynamic frameworks for Swift Firebase/ML Kit
   use_frameworks! :linkage => :dynamic
+  # Ensure ObjC deps expose module maps for Swift
+  use_modular_headers!
 
-  # Do NOT pin gRPC unless a modulemap error appears later
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
-  # Enforce iOS 16 across pods + user targets
+  # Enforce iOS 16 across all pods & user targets
   installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-
-      # Ensure Flutter/Swift module visibility for all pods that `#import <Flutter/Flutter.h>`
-      # and Swift targets that import the Flutter module.
-      config.build_settings['FRAMEWORK_SEARCH_PATHS'] = ['$(inherited)', '$(PROJECT_DIR)/Pods/Flutter']
-      config.build_settings['HEADER_SEARCH_PATHS']    = ['$(inherited)', '$(PROJECT_DIR)/Pods/Headers/Public', '$(PROJECT_DIR)/Pods/Headers/Public/Flutter']
-      config.build_settings['OTHER_SWIFT_FLAGS']    ||= ['$(inherited)']
     end
   end
-
   installer.aggregate_targets.each do |aggregate|
     aggregate.user_targets.each do |ut|
       ut.build_configurations.each do |config|
@@ -51,12 +40,5 @@ post_install do |installer|
       end
     end
   end
-
   flutter_post_install(installer) if defined?(flutter_post_install)
 end
-'@
-
-$pod | Set-Content -Encoding ascii -NoNewline ios\Podfile
-git add ios\Podfile
-git commit -m "iOS: fix 'Flutter/Flutter.h' not found—remove use_modular_headers, keep dynamic frameworks, add search paths"
-git push origin main
