--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,7 +9,9 @@ project 'Runner', {
 
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# Flutter integration
+# -----------------------------
+# Flutter integration (robust)
+# -----------------------------
 flutter_bin = %x(which flutter).strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
@@ -17,31 +19,28 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Swift Firebase/MLKit work well as dynamic frameworks; Obj-C deps get module maps.
-
+  # Keep static pods (NO use_frameworks!) and expose module maps for Swift
   use_modular_headers!
+
+  # ---------- gRPC pins to fix modulemap errors ----------
+  pod 'gRPC-C++',   '1.62.2', :modular_headers => true
+  pod 'gRPC-Core',  '1.62.2', :modular_headers => true
+  pod 'gRPC-Proto', '1.62.2', :modular_headers => true
+  # If you still see gRPC/Protobuf header issues, also pin:
+  # pod 'Protobuf', '3.25.1'
+  # ------------------------------------------------------
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
-  # Make every pod + user target iOS 16
   installer.pods_project.targets.each do |t|
+    # Ensure Flutter adds its build settings (Header Search Paths, etc.)
+    flutter_additional_ios_build_settings(t)
+
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
     end
-  end
-  installer.aggregate_targets.each do |aggregate|
-    aggregate.user_targets.each do |ut|
-      ut.build_configurations.each do |config|
-        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
-      end
-    end
-  end
-
-  # *** Critical: add Flutter headers & other build flags to every pod target ***
-  installer.pods_project.targets.each do |target|
-    flutter_additional_ios_build_settings(target)
   end
 end
