--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,7 +2,7 @@ platform :ios, '16.0'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
-  'Debug' => :debug,
+  'Debug'   => :debug,
   'Profile' => :release,
   'Release' => :release,
 }
@@ -17,10 +17,14 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Static pods (no use_frameworks!)
+  # Static pods (NO use_frameworks!)
   use_modular_headers!
 
-  # No explicit gRPC pins — let Firebase resolve
+  # Ensure gRPC generates module maps (fixes missing gRPC-Core.modulemap)
+  pod 'gRPC-C++',      :modular_headers => true
+  pod 'gRPC-Core',     :modular_headers => true
+  pod 'gRPC-ProtoRPC', :modular_headers => true
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
