--- a/ios/Flutter/Profile.xcconfig
+++ b/ios/Flutter/Profile.xcconfig
@@ -1,4 +1,1 @@
-#include? "Target Support Files/Pods-Runner/Pods-Runner.profile.xcconfig"
-#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile.xcconfig"
-#include "Generated.xcconfig"
-IPHONEOS_DEPLOYMENT_TARGET = 16.0
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile.xcconfig"#include "Generated.xcconfig"IPHONEOS_DEPLOYMENT_TARGET = 16.0
