--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,7 @@ project 'Runner', {
   'Release' => :release,
 }
 
-# Helpful CocoaPods opts (safe defaults)
+# CocoaPods settings
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
 # Flutter integration
@@ -18,17 +18,11 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build Swift pods (Firebase/*) as dynamic frameworks so -Swift.h exists
+  # Build pods as dynamic frameworks (needed for Firebase Swift pods)
   use_frameworks! :linkage => :dynamic
 
-  # Ensure ObjC deps expose module maps for Swift pods
-  use_modular_headers!
-
-  # Keep gRPC toolchain visible to Swift (modulemaps)
-  pod 'gRPC-C++',      :modular_headers => true
-  pod 'gRPC-Core',     :modular_headers => true
-  pod 'gRPC-ProtoRPC', :modular_headers => true
-  # pod 'BoringSSL-GRPC', :modular_headers => true   # (only if needed)
+  # DO NOT call use_modular_headers! here
+  # DO NOT add explicit gRPC pods here – let Firebase resolve what it needs
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
@@ -36,9 +30,13 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |t|
     flutter_additional_ios_build_settings(t)
+
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+
+      # Safety valve for “non-modular header inside framework module”
+      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
     end
   end
 end
