--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,10 +7,9 @@ project 'Runner', {
   'Release' => :release,
 }
 
-# CocoaPods settings
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# Flutter integration
+# Flutter integration (robust on CI)
 flutter_bin = %x(which flutter).strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
@@ -18,11 +17,13 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build pods as dynamic frameworks (needed for Firebase Swift pods)
-  use_frameworks! :linkage => :dynamic
+  # ✅ Static pods (NO use_frameworks!)
+  use_modular_headers!
 
-  # DO NOT call use_modular_headers! here
-  # DO NOT add explicit gRPC pods here – let Firebase resolve what it needs
+  # Keep gRPC toolchain visible to Swift if needed
+  pod 'gRPC-C++',      :modular_headers => true
+  pod 'gRPC-Core',     :modular_headers => true
+  pod 'gRPC-ProtoRPC', :modular_headers => true
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
@@ -30,13 +31,9 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |t|
     flutter_additional_ios_build_settings(t)
-
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-
-      # Safety valve for “non-modular header inside framework module”
-      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
     end
   end
 end
