--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,12 +17,10 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build Firebase pods as frameworks so -Swift.h headers are generated and visible
-  use_frameworks! :linkage => :dynamic
+  # ? Static pods (NO use_frameworks!)
+  use_modular_headers!
 
-  # DO NOT call use_modular_headers! here
-  # DO NOT pin gRPC pods – let Firebase resolve them
-
+  # (Do NOT add explicit gRPC pins unless we regress on modulemaps)
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
@@ -32,8 +30,8 @@ post_install do |installer|
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+      # Keep this off for static pods to avoid masking issues:
+      # config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'NO'
     end
   end
 end
