--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,20 +7,26 @@ project 'Runner', {
   'Release' => :release,
 }
 
+# sane CocoaPods defaults
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# Flutter integration
-flutter_bin = %x(which flutter).strip
+# --- Flutter integration ---
+flutter_bin  = %x(which flutter).strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # ? Static pods (NO use_frameworks!)
-  use_modular_headers!
+  # Build Swift pods (Firebase/*) as frameworks so FirebaseAuth-Swift.h exists
+  use_frameworks! :linkage => :dynamic
 
-  # (Do NOT add explicit gRPC pins unless we regress on modulemaps)
+  # Ensure the gRPC toolchain publishes modulemaps CocoaPods links to
+  pod 'gRPC-C++',       :modular_headers => true
+  pod 'gRPC-Core',      :modular_headers => true
+  pod 'gRPC-ProtoRPC',  :modular_headers => true
+  pod 'BoringSSL-GRPC', :modular_headers => true
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
@@ -30,8 +36,9 @@ post_install do |installer|
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      # Keep this off for static pods to avoid masking issues:
-      # config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'NO'
+      # Helps mixed Swift/ObjC pods play nicely
+      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
   end
 end
