--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,39 +10,51 @@ project 'Runner', {
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
 # Flutter integration
-flutter_bin = %x(which flutter).strip
+flutter_bin  = %x(which flutter).strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # ? Build pods statically (NO use_frameworks!)
-  use_modular_headers!
+  # Build Swift pods as dynamic frameworks so -Swift.h headers exist
+  use_frameworks! :linkage => :dynamic
 
-  # Keep gRPC toolchain visible if Firebase pulls it in
-  pod 'gRPC-C++',      :modular_headers => true
-  pod 'gRPC-Core',     :modular_headers => true
-  pod 'gRPC-ProtoRPC', :modular_headers => true
-  pod 'BoringSSL-GRPC',:modular_headers => true
+  # --- Force module maps for ObjC deps used by Swift Firebase pods ---
+  # Interop & utilities used by FirebaseAuth/Firestore/Storage
+  pod 'FirebaseAuthInterop',      :modular_headers => true
+  pod 'FirebaseAppCheckInterop',  :modular_headers => true
+  pod 'FirebaseCore',             :modular_headers => true
+  pod 'FirebaseCoreExtension',    :modular_headers => true
+  pod 'GoogleUtilities',          :modular_headers => true
+  pod 'RecaptchaInterop',         :modular_headers => true
+
+  # If Firestore/Storage/Auth are present, make their internals visible, too
+  pod 'FirebaseFirestore',        :modular_headers => true
+  pod 'FirebaseStorage',          :modular_headers => true
+  # (Auth itself is Swift; leaving as-is is fine. If needed, uncomment:)
+  # pod 'FirebaseAuth',             :modular_headers => true
+
+  # gRPC toolchain so Firebase (Firestore/Storage) has proper modulemaps
+  pod 'gRPC-C++',       :modular_headers => true
+  pod 'gRPC-Core',      :modular_headers => true
+  pod 'gRPC-ProtoRPC',  :modular_headers => true
+  pod 'BoringSSL-GRPC', :modular_headers => true
+  # ---------------------------------------------------------------
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |t|
-    # Must be called so Flutter/Pods agree on build settings
     flutter_additional_ios_build_settings(t)
-
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-
-      # ?? IMPORTANT for static pods:
-      # Do NOT force non-modular includes or module distribution here.
-      # These two lines should be absent or explicitly NO.
-      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'NO'
-      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
+      # Needed because some Firebase headers are included directly from frameworks
+      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      # Optional, but keeps Swift interface stable when using frameworks
+      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
   end
 end
