iOS: static pods + modular headers; drop use_frameworks!; iOS 16; sane build flags

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,44 +1,1 @@
-Building iOS
-4m 45s
-
-
-
-
-
-== Building for iOS ==
-
-> xcode-project use-profiles
-Configure code signing settings
-Searching for files matching /Users/builder/Library/MobileDevice/Provisioning Profiles/*.mobileprovision
-Searching for files matching /Users/builder/Library/MobileDevice/Provisioning Profiles/*.provisionprofile
-List available code signing certificates in keychain /Users/builder/Library/codemagic-cli-tools/keychains/06-10-25_4xayyulz.keychain-db
-Searching for files matching /Users/builder/clone/ios/**/*.xcodeproj
-Completed configuring code signing settings
- - Using profile "Nyari ios_app_store 1759650135" [f2c550e1-5aef-4fd7-982d-72952ef75b12] for target "Runner" [Debug] from project "Runner"
- - Using profile "Nyari ios_app_store 1759650135" [f2c550e1-5aef-4fd7-982d-72952ef75b12] for target "Runner" [Profile] from project "Runner"
- - Using profile "Nyari ios_app_store 1759650135" [f2c550e1-5aef-4fd7-982d-72952ef75b12] for target "Runner" [Release] from project "Runner"
-Generated options for exporting the project
- - Method: app-store
- - Provisioning Profiles:
-     - com.nyari.app: Nyari ios_app_store 1759650135
- - Signing Certificate: Apple Distribution
- - Signing Style: manual
- - Team Id: 57K7Z25R9U
-Saved export options to /Users/builder/export_options.plist
-
-> flutter build ipa --release --export-options-plist /Users/builder/export_options.plist
-
-Archiving com.nyari.app...
-Automatically signing iOS for device deployment using specified development team in Xcode project: 57K7Z25R9U
-Running pod install...                                             12.2s
-Running Xcode build...                                          
-Xcode archive done.                                         260.7s
-Failed to build iOS app
-Lexical or Preprocessor Issue (Xcode): Include of non-modular header inside framework module 'firebase_storage.FLTTaskStateChannelStreamHandler': '/Users/builder/clone/ios/Pods/Headers/Public/Firebase/Firebase.h'
-/Users/builder/.pub-cache/hosted/pub.dev/firebase_storage-12.2.0/ios/Classes/FLTTaskStateChannelStreamHandler.h:12:8
-
-Encountered error while archiving for device.
-
-
-Build failed :|
-Failed to build for iOS
+<PASTE THE RUBY BLOCK ABOVE HERE EXACTLY>
